argo/fauli-apps/cells/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cells-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: cells-app
  template:
    metadata:
      labels:
        app: cells-app
    spec:
      containers:
      - name: cells-app-container
        image: fauli/cells:latest
        ports:
        - containerPort: 80
      imagePullSecrets:
      - name: regcred  # Optional, if your image is in a private registry
