argo/fauli-apps/cells/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cells-service
spec:
  selector:
    app: cells-app
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
