argo/fauli-apps/cells/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cells-ingress
spec:
  rules:
  - host: cells.gute-idee.me
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: cells-service
            port:
              number: 80
  tls:
  - hosts:
    - cells.gute-idee.me
    secretName: origin-cert  # Secret for storing SSL certificate
